--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -5,7 +5,7 @@ header {
     justify-content: center;
     align-content: center;
     width: 100%;
-    background-color: dimgray;
+    background-color: blueviolet;
     border-bottom: 2px solid black;
     height: 62px;
     top: 0;
